Anonymous | Login | 2021-01-24 06:25 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0025104 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2014-07-25 20:18 | 2018-06-29 21:19 | ||||
Reporter | shoogen | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Linux 64-bit | OS | Debian | OS Version | 7.5 | ||||
Product Version | [OCCT] 6.7.1 | ||||||||
Target Version | [OCCT] 7.3.0 | Fixed in Version | [OCCT] 7.3.0 | ||||||
Summary | 0025104: Prism from BSpline curve can not be chamfered | ||||||||
Description | The shape returned by "prism" fails the bopcheck for an unknown reason. If i use it for chamfering coord.Modulus() returns 0, which triggers a "VectorWithNullMagnitude" exception, without a message. | ||||||||
Steps To Reproduce | pload ALL restore whale2-draw-path.brep renamevar whale2-draw-path path prism Extrude001 path 0. 0. 5. donly Extrude001 bopcheck Extrude001 | ||||||||
Tags | BOPAlgo_OperationAborted | ||||||||
Test case number | bugs modalg_7 bug25104 | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
|||||||||||||||||||||||||
|
![]() |
|
(0030509) shoogen (reporter) 2014-07-31 14:19 |
It's seems to me that there is a general problem with BSplines and the mapping of edges and faces using FindFromKey. IMHO this is related to 25110 |
(0030690) shoogen (reporter) 2014-08-12 20:15 |
i reproduced the actual filleting with DRAWEXE > explode Extrude001 E > blend Fillet Extrude001 1 Extrude001_4 1 Extrude001_7 1 Extrude001_10 1 Extrude001_13 1 Extrude001_16 1 Extrude001_19 1 Extrude001_22 1 Extrude001_25 1 Extrude001_27 returns An exception was caught 0x7fb5791c5911 : gp_VectorWithNullMagnitude: ** Exception ** 0x7fb5791c5911 : gp_VectorWithNullMagnitude: |
(0069060) apv (tester) 2017-08-02 17:20 |
Problem described in issue is reproduced on current state of OCCT. |
(0070835) emv (developer) 2017-09-26 09:02 edited on: 2017-09-26 09:03 |
The bopcheck fails because intersection of some of the sub-shapes raises exception. Try to intersect the pairs in the attached compound:restore pairs.brep pairs foreach c [explode pairs] { copy $c pair explode pair bop pair_1 pair_2 } |
(0071910) aml (developer) 2017-11-01 13:45 |
Dear msv, It seems that this issue has been fixed. I will take care of it. |
(0071926) git (administrator) 2017-11-02 12:08 |
Branch CR25104 has been created by aml. SHA-1: 7becd57195395ff0897a831f22c231c0fd81bf75 Detailed log of new commits: Author: aml Date: Thu Nov 2 12:08:18 2017 +0300 0025104: Prism from BSpline curve can not be chamfered Protection from zero-length vectors has been added. |
(0071967) git (administrator) 2017-11-03 06:51 |
Branch CR25104 has been updated by aml. SHA-1: 35c5f26eb60ae554d5b90fb4945571f5c2c72a93 Detailed log of new commits: Author: aml Date: Fri Nov 3 06:51:21 2017 +0300 # Test cases correction. |
(0071968) git (administrator) 2017-11-03 07:39 |
Branch CR25104 has been updated forcibly by aml. SHA-1: f4ded11eddd7047da182641c48b3b95360ce9f81 |
(0071972) aml (developer) 2017-11-03 10:56 |
Dear msv, Could you please check the current state of the CR25104 branch? Corresponding Jenkins job is: http://jenkins-test-10.nnov.opencascade.com:8080/view/CR25104-master-AML/ [^] The following cases are fixed under windows: bug25104 bug25693_1 bug25693_2 |
(0072059) msv (developer) 2017-11-08 17:54 |
Many test cases show decreased performance. Could you analyze the reason on the example of the following tests? CPU boolean bfuse_2d: 1.3416085999999998 / 0.7956051000000002 [+68.63%] CPU boolean bopcut_simple: 20.38933070000004 / 17.830914299999993 [+14.35%] CPU thrusection specific: 5.428834799999996 / 4.461628599999995 [+21.68%] CPU bugs mesh bug25806: 36.7538356 / 25.4905634 [+44.19%] |
(0072173) git (administrator) 2017-11-10 14:08 |
Branch CR25104 has been updated forcibly by aml. SHA-1: ca6b3aec5e5217eb60a88c47cef14d1d4afa9dee |
(0072193) aml (developer) 2017-11-11 10:48 edited on: 2017-11-11 10:53 |
CR25104-master-AML testgrid boolean bfuse_2d -parallel 1 master: Elapsed time: 0 Hours 0 Minutes 7.133023403 Seconds Elapsed time: 0 Hours 0 Minutes 7.10875429874 Seconds Elapsed time: 0 Hours 0 Minutes 7.20491770517 Seconds 25104: Elapsed time: 0 Hours 0 Minutes 7.39321095336 Seconds Elapsed time: 0 Hours 0 Minutes 7.09034411979 Seconds Elapsed time: 0 Hours 0 Minutes 7.27562945378 Seconds testgrid boolean bopcut_simple -parallel 1 master: Elapsed time: 0 Hours 1 Minutes 45.4793312428 Seconds Elapsed time: 0 Hours 1 Minutes 43.7380158271 Seconds Elapsed time: 0 Hours 1 Minutes 43.0334414918 Seconds 25104: Elapsed time: 0 Hours 1 Minutes 44.3422253874 Seconds Elapsed time: 0 Hours 1 Minutes 43.5321976635 Seconds Elapsed time: 0 Hours 1 Minutes 45.3253594649 Seconds test bugs mesh bug25806 -echo master: TOTAL CPU TIME: 26.234375 sec TOTAL CPU TIME: 28.765625 sec TOTAL CPU TIME: 28.625 sec TOTAL CPU TIME: 36.046875 sec TOTAL CPU TIME: 27.59375 sec 25104: TOTAL CPU TIME: 26.46875 sec TOTAL CPU TIME: 36.578125 sec TOTAL CPU TIME: 33.703125 sec TOTAL CPU TIME: 29.390625 sec TOTAL CPU TIME: 27.75 sec testgrid thrusection specific -parallel 1 master: Elapsed time: 0 Hours 0 Minutes 31.294814899 Seconds Elapsed time: 0 Hours 0 Minutes 31.4890486621 Seconds Elapsed time: 0 Hours 0 Minutes 32.2164092851 Seconds Elapsed time: 0 Hours 0 Minutes 32.5949582258 Seconds 25104: Elapsed time: 0 Hours 0 Minutes 32.322451308 Seconds Elapsed time: 0 Hours 0 Minutes 31.6478428142 Seconds Elapsed time: 0 Hours 0 Minutes 33.0373280631 Seconds Elapsed time: 0 Hours 0 Minutes 32.0014748887 Seconds |
(0072194) aml (developer) 2017-11-11 10:53 |
So, I cannot see any significant impact on performance. The only thing which should be reported - the unstable behavior of the bug25806 issue. |
(0072201) msv (developer) 2017-11-13 10:26 |
I agree. |
(0072202) aml (developer) 2017-11-13 10:34 |
Dear msv, could you please check CR25104? The corresponding jenkins task: http://jenkins-test-10.nnov.opencascade.com:8080/view/CR25104-master-AML/ [^] |
(0072203) msv (developer) 2017-11-13 10:50 |
Reviewed. |
(0072209) bugmaster (administrator) 2017-11-13 11:48 |
Combination - OCCT branch: CR25104 SHA: ca6b3aec5e5217eb60a88c47cef14d1d4afa9dee Products branch: master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: No new/fixed warnings. Regressions/Differences/Improvements: No regressions/differences. CPU differences: OCCT Debian70-64 Total CPU difference: 20765.97000000055 / 20769.880000000467 [-0.02%] Windows-64-VC10 Total CPU difference: 18548.28489849851 / 18481.95327329852 [+0.36%] Products Debian70-64 Total CPU difference: 7899.500000000094 / 7901.260000000098 [-0.02%] Windows-64-VC10 Total CPU difference: 7991.182425199982 / 7874.587277799976 [+1.48%] Image differences : No differences that require special attention. Memory differences : No differences that require special attention. |
(0072780) git (administrator) 2017-12-07 21:07 |
Branch CR25104 has been deleted by kgv. SHA-1: ca6b3aec5e5217eb60a88c47cef14d1d4afa9dee |
![]() |
|||
occt: master 90f0fdad
Timestamp: 2017-11-02 09:08:18 Author: aml Committer: bugmaster [ Details ] [ Diff ] |
0025104: Prism from BSpline curve can not be chamfered Protection from zero-length vectors has been added. |
||
mod - src/IntCurveSurface/IntCurveSurface_Inter.gxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_EdgeEdge.cxx | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_7/bug25104 | [ Diff ] [ File ] | ||
mod - tests/bugs/moddata_3/bug25693_1 | [ Diff ] [ File ] | ||
mod - tests/bugs/moddata_3/bug25693_2 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2014-07-25 20:18 | shoogen | New Issue | |
2014-07-25 20:18 | shoogen | Assigned To | => ifv |
2014-07-25 20:18 | shoogen | File Added: whale2.zip | |
2014-07-31 14:19 | shoogen | Note Added: 0030509 | |
2014-08-12 20:15 | shoogen | Note Added: 0030690 | |
2014-09-11 18:54 | abv | Target Version | => 7.1.0 |
2015-01-26 11:19 | shoogen | Tag Attached: BOPAlgo_OperationAborted | |
2016-10-28 11:54 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-21 11:34 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-08-02 17:20 | apv | Test case number | => bugs modalg_7 bug25104 |
2017-08-02 17:20 | apv | Note Added: 0069060 | |
2017-09-26 09:00 | emv | Relationship added | related to 0025693 |
2017-09-26 09:01 | emv | Relationship added | related to 0025879 |
2017-09-26 09:02 | emv | Note Added: 0070835 | |
2017-09-26 09:03 | emv | Note Edited: 0070835 | View Revisions |
2017-09-26 09:03 | emv | File Added: pairs.brep | |
2017-11-01 13:45 | aml | Note Added: 0071910 | |
2017-11-01 13:45 | aml | Assigned To | ifv => aml |
2017-11-01 13:45 | aml | Status | new => assigned |
2017-11-02 12:08 | git | Note Added: 0071926 | |
2017-11-03 06:51 | git | Note Added: 0071967 | |
2017-11-03 07:39 | git | Note Added: 0071968 | |
2017-11-03 10:56 | aml | Note Added: 0071972 | |
2017-11-03 10:56 | aml | Assigned To | aml => msv |
2017-11-03 10:56 | aml | Status | assigned => resolved |
2017-11-08 17:37 | msv | Severity | just a question => minor |
2017-11-08 17:54 | msv | Note Added: 0072059 | |
2017-11-08 17:54 | msv | Assigned To | msv => aml |
2017-11-08 17:54 | msv | Status | resolved => assigned |
2017-11-10 14:08 | git | Note Added: 0072173 | |
2017-11-11 10:48 | aml | Note Added: 0072193 | |
2017-11-11 10:53 | aml | Note Added: 0072194 | |
2017-11-11 10:53 | aml | Note Edited: 0072193 | View Revisions |
2017-11-13 10:26 | msv | Note Added: 0072201 | |
2017-11-13 10:34 | aml | Note Added: 0072202 | |
2017-11-13 10:34 | aml | Assigned To | aml => msv |
2017-11-13 10:34 | aml | Status | assigned => resolved |
2017-11-13 10:50 | msv | Note Added: 0072203 | |
2017-11-13 10:50 | msv | Assigned To | msv => bugmaster |
2017-11-13 10:50 | msv | Status | resolved => reviewed |
2017-11-13 10:57 | aml | Relationship added | related to 0029316 |
2017-11-13 11:48 | bugmaster | Note Added: 0072209 | |
2017-11-13 11:48 | bugmaster | Status | reviewed => tested |
2017-11-17 16:10 | bugmaster | Changeset attached | => occt master 90f0fdad |
2017-11-17 16:10 | bugmaster | Status | tested => verified |
2017-11-17 16:10 | bugmaster | Resolution | open => fixed |
2017-12-07 21:07 | git | Note Added: 0072780 | |
2018-02-18 00:04 | abv | Relationship added | related to 0025110 |
2018-06-29 21:15 | aiv | Fixed in Version | => 7.3.0 |
2018-06-29 21:19 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |