0025104: Prism from BSpline curve can not be chamfered

Protection from zero-length vectors has been added.